<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_vo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="trelaalec@gmail.com">atrela</maintainer>
  <maintainer email="sridevikaza98@gmail.com">sridevi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>opencv2</build_depend> 

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>Eigen3</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>opencv2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
